--- a/civic_europe/assets/scss/components/_activity.scss
+++ b/civic_europe/assets/scss/components/_activity.scss
@@ -20,7 +20,7 @@
 
         text-align: center;
         line-height: 3rem;
-        font-size: rem(24px);
+        font-size: $h4-font-size;
     }
 
     .action-date {
