--- a/civic_europe/assets/scss/components/_form-control-upload.scss
+++ b/civic_europe/assets/scss/components/_form-control-upload.scss
@@ -17,7 +17,7 @@
 
     .btn-default,
     .btn-danger {
-        font-size: rem(24px);
+        font-size: $h4-font-size;
         width: 2.5*$spacer;
         border: 0;
         border-radius: 0;
