--- a/civic_europe/assets/scss/components/_userpicker.scss
+++ b/civic_europe/assets/scss/components/_userpicker.scss
@@ -63,7 +63,7 @@
     }
 
     &-cta {
-        font-size: rem(14px);
+        font-size: $font-size-base;
         color: $ce-wizard-red;
         text-decoration: underline;
         text-align: right;
