apps/ideas: remove/change references to idea sketch and proposal

--- a/apps/ideas/templates/civic_europe_ideas/includes/idea_detail_header.html
+++ b/apps/ideas/templates/civic_europe_ideas/includes/idea_detail_header.html
@@ -7,7 +7,7 @@
 
         <div class="row">
             <div class="col ideadetail-btn">
-                <a href="{% url 'idea-sketch-list' %}" class="bt btn-light btn-back-to" role="button"><i class="fa fa-chevron-left" aria-hidden="true"></i> {% trans "Idea Space" %}</a>
+                <a href="{% url 'idea-list' %}" class="bt btn-light btn-back-to" role="button"><i class="fa fa-chevron-left" aria-hidden="true"></i> {% trans "Idea Space" %}</a>
             </div>
         </div>
 
