remove all other rem(px) with just px measurments for heights and gradiants and commenting out mixin that seems to convert the rem sizes

--- a/civic_europe/assets/scss/components/_blocks.scss
+++ b/civic_europe/assets/scss/components/_blocks.scss
@@ -173,7 +173,7 @@
     max-width: 100%;
 
     @media screen and (max-width: $screen-sm) {
-        max-width: rem(200px);
+        max-width: 200px;
     }
 
     .teasertextblock-linktext {
