--- a/civic_europe/assets/scss/components/_custom_form.scss
+++ b/civic_europe/assets/scss/components/_custom_form.scss
@@ -64,7 +64,7 @@
         }
 
         .error-block:before {
-            position: absolute;
+            position: relative;
             left: 0.5em;
             display: inline;
             font-family: "Font Awesome 5 Free", sans-serif;
