--- a/civic_europe/assets/scss/components/_login-register.scss
+++ b/civic_europe/assets/scss/components/_login-register.scss
@@ -1,5 +1,5 @@
 .login-register-top {
-    background: linear-gradient(to bottom, $brand-primary rem(360px), #fff 0%);
+    background: linear-gradient(to bottom, $brand-primary 360px, #fff 0%);
 }
 
 .login-register {
