--- a/civic_europe/assets/scss/components/_select-item.scss
+++ b/civic_europe/assets/scss/components/_select-item.scss
@@ -1,5 +1,5 @@
 .select-item {
-    min-width: rem(200px);
+    min-width: 200px;
 
     // overwrite more specific styling for element in dropdown menu
     // can probably made unimportant with bootstrap update?!
