--- a/civic_europe/assets/scss/components/_journey.scss
+++ b/civic_europe/assets/scss/components/_journey.scss
@@ -66,7 +66,7 @@
         padding-bottom: 2.5*$spacer;
     }
 
-    background: linear-gradient(to bottom, $ce-lighter-gray rem(360px), #fff 0%);
+    background: linear-gradient(to bottom, $ce-lighter-gray 360px, #fff 0%);
 }
 
 .journey-form-btn-box {
