--- a/civic_europe/assets/scss/components/_page.scss
+++ b/civic_europe/assets/scss/components/_page.scss
@@ -6,7 +6,7 @@
 }
 
 .custompage {
-    background: linear-gradient(to bottom, $brand-primary rem(160px), #fff 0%);
+    background: linear-gradient(to bottom, $brand-primary 160px, #fff 0%);
 }
 
 .custompage-blue {
@@ -14,5 +14,5 @@
 }
 
 .custompage-45 {
-    background: linear-gradient(to bottom, $brand-primary rem(45px), #fff 0%);
+    background: linear-gradient(to bottom, $brand-primary 45px, #fff 0%);
 }
