--- a/civic_europe/assets/scss/core/_dropdowns.scss
+++ b/civic_europe/assets/scss/core/_dropdowns.scss
@@ -9,7 +9,8 @@
     }
     > button,
     > li > button,
-    > li > form > button {
+    > li > form > button,
+    > li > a {
         // same as for links in bootstrap
         display: block;
         padding: 3px 20px;
