--- a/civic_europe/assets/scss/core/_fonts.scss
+++ b/civic_europe/assets/scss/core/_fonts.scss
@@ -25,7 +25,7 @@
         url('../fonts/Lato-Bold.woff') format('woff'), /* Modern Browsers */
         url('../fonts/Lato-Bold.ttf') format('truetype');
     font-style: normal;
-    font-weight: $demibold;
+    font-weight: 600;
 }
 
 @font-face {
@@ -35,7 +35,7 @@
         url('../fonts/Lato-BoldItalic.woff') format('woff'), /* Modern Browsers */
         url('../fonts/Lato-BoldItalic.ttf') format('truetype');
     font-style: italic;
-    font-weight: $demibold;
+    font-weight: 600;
 }
 
 @font-face {
