--- a/apps/ideas/templates/civic_europe_ideas/includes/idealist_item.html
+++ b/apps/ideas/templates/civic_europe_ideas/includes/idealist_item.html
@@ -18,7 +18,7 @@
             </div>
 
             <h4 class="idealist-tile-title"><a href="{% url 'idea-detail' slug=idea.slug %}">{{ idea.idea_title }}</a></h4>
-            {{ idea.idea_pitch|truncatechars:240 }}
+            {{ idea.pitch|truncatechars:240 }}
         </div>
     </div>
     <div class="idealist-footer">
