--- a/apps/ideas/templates/civic_europe_ideas/includes/idea_detail_watch_btns.html
+++ b/apps/ideas/templates/civic_europe_ideas/includes/idea_detail_watch_btns.html
@@ -1,12 +1,8 @@
 {% load i18n react_follows rules discovery_tags %}
 
-{% if idea.proposal %}
-    {% has_perm 'civic_europe_ideas.change_idea' request.user idea as can_change_proposal %}
-{% elif idea.ideasketch %}
-    {% has_perm 'civic_europe_ideas.change_idea' request.user idea.ideasketch as can_change_sketch %}
-    {% has_perm 'civic_europe_ideas.add_proposal' request.user idea as can_add_proposal %}
-{% endif %}
-{% if can_change_sketch or can_change_proposal or can_add_proposal %}
+{% has_perm 'civic_europe_ideas.change_idea' request.user idea as can_change_idea %}
+
+{% if can_change_idea %}
 
 {% if view.display_type == 'idea' %}
 <li class="dropdown nav-idea {{ xs_class }}">
@@ -15,13 +11,8 @@
         <span class="btn-idea-label">{% trans 'More' %}</span>
     </button>
     <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownEdit">
-        {% if can_change_sketch %}
-        <li><a href="{% url 'idea-sketch-update' idea.slug %}">{% trans "edit ideasketch" %}</a></li>
-        {% elif can_change_proposal %}
-        <li><a href="{% url 'proposal-update' idea.slug %}">{% trans "edit proposal" %}</a></li>
-        {% endif %}
-        {% if can_add_proposal %}
-        <li><a href="{% url 'idea-sketch-add-proposal' idea.slug %}">{% trans 'add full proposal' %}</a></li>
+        {% if can_change_idea %}
+        <li><a href="{% url 'idea-update' idea.slug %}">{% trans "edit ideasketch" %}</a></li>
         {% endif %}
     </ul>
 </li>
