--- a/civic_europe/templates/account/civic_europe/includes/header.html
+++ b/civic_europe/templates/account/civic_europe/includes/header.html
@@ -4,11 +4,11 @@
 {% url  'account_signup' as account_signup_url %}
 <header>
     <ul class="nav nav-tabs tabs login-register-tabs" role="tablist">
-        <li role="presentation" class="nav-item {% if request.path == account_login_url %}active{% endif %}">
-            <a href="{{ account_login_url }}?next={{ redirect_field_value|urlencode }}">{% trans "login" %}</a>
+        <li role="presentation" class="nav-item">
+            <a class="nav-link {% if request.path == account_login_url %}active{% endif %}" href="{{ account_login_url }}?next={{ redirect_field_value|urlencode }}">{% trans "login" %}</a>
         </li>
-        <li role="presentation" class="nav-item {% if request.path == account_signup_url %}active{% endif %}">
-            <a href="{{ account_signup_url }}?next={{ redirect_field_value|urlencode }}">{% trans "register" %}</a>
+        <li role="presentation" class="nav-item">
+            <a class="nav-link {% if request.path == account_signup_url %}active{% endif %}" href="{{ account_signup_url }}?next={{ redirect_field_value|urlencode }}">{% trans "register" %}</a>
         </li>
     </ul>
 </header>
