cleaning: removing commented out code and unused files including the mixins for px to rem conversion and individual loading of bootstrap components

--- a/civic_europe/assets/scss/core/_dropdowns.scss
+++ b/civic_europe/assets/scss/core/_dropdowns.scss
@@ -54,7 +54,7 @@
 
             > li > button,
             > li > form > button {
-                padding: 5px 15px 5px 25px;
+                padding: 0.25*$spacer $spacer 0.25*$spacer 1.5*$spacer;
             }
 
             > li > button,
