--- a/civic_europe/assets/scss/core/_type.scss
+++ b/civic_europe/assets/scss/core/_type.scss
@@ -1,6 +1,4 @@
-// html {
-//     @include rem-baseline;
-//
-//     -webkit-font-smoothing: antialiased;
-//     -moz-osx-font-smoothing: grayscale;
-// }
+html {
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
